--- a/pom.xml
+++ b/pom.xml
@@ -234,9 +234,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19</version>
                 <configuration>
-                    <parallel>classes</parallel>
+                    <!--parallel>classes</parallel>
                     <threadCount>1</threadCount>
-                    <forkCount>1</forkCount>
+                    <forkCount>1</forkCount-->
                     <!--skipAfterFailureCount>1</skipAfterFailureCount-->
                     <excludes>
                         <!-- skip some tests for servers without IPv6 support.  -->
