--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,4 +94,4 @@ jobs:
         rm -rf ~/arcus/zookeeper/data
         cd ~/arcus/scripts && echo -e ${ARCUS_CONF} > conf/test.conf && ./arcus.sh quicksetup conf/test.conf
     - name: Test ARCUS Client
-      run: mvn test -DUSE_ZK=false -DARCUS_HOST=127.0.0.1:11212 && mvn test -DUSE_ZK=true
+      run: mvn clean install -DskipTests && mvn clean test -DUSE_ZK=false -DARCUS_HOST=127.0.0.1:11212 && mvn clean test -DUSE_ZK=true
