--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.navercorp.arcus</groupId>
+    <groupId>com.jam2in.arcus</groupId>
     <artifactId>arcus-java-client</artifactId>
     <version>1.14.1</version>
     <name>Arcus Java Client</name>
@@ -195,7 +195,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <!-- <source>src/test/java</source> -->
+                                <source>src/test/java</source>
                                 <source>src/test/manual</source>
                             </sources>
                         </configuration>
@@ -208,14 +208,12 @@
                 <version>2.7</version>
                 <executions>
                     <execution>
-                        <id>generate-java-doc</id>
-                        <phase>package</phase>
-                        <!-- Javadocs for the central repo
+                        <!--id>generate-java-doc</id>
+                        <phase>package</phase-->
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
-                        -->
                     </execution>
                 </executions>
                 <configuration>
@@ -278,7 +276,6 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
             </plugin>
-            <!-- GPG signing used when deploying to the central repo
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -293,7 +290,17 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -329,7 +336,6 @@
         </extensions>
     </build>
 
-    <!-- Deploy via sonatype
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -340,5 +346,4 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
     </distributionManagement>
-    -->
 </project>
