--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
       - name: Update apt-get
@@ -33,9 +33,7 @@ jobs:
           # build server
           cd ~/arcus && docker compose up -d 
 
-      - name: Build ARCUS Client
-        run: mvn install -DskipTests
       - name: Test ARCUS Client Without ZK
-        run: mvn test -DUSE_ZK=false -Dtest=ObserverTest
+        run: mvn clean verify -DUSE_ZK=false -Dtest=ObserverTest
       - name: Test ARCUS Client With ZK
-        run: mvn test -DUSE_ZK=true
+        run: mvn clean verify -DUSE_ZK=true
